# flatten

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  _parse.py  _report.py  benchmark-report.md  benchmark-results.json  cosmic-ray.toml  coverage.xml  dump_interim.txt  dump_out.txt  pyproject.toml  session.sqlite  survived_report.txt
.claude/hooks/: settings.json  workflow-guard.sh
.codex/skills/: closure-check.md  equivalence-harness.md  libcst-transform.md  sys-monitoring-trace.md
AI/: global_rules.md
benchmarks/: README.md  __init__.py  baseline.json  metrics.py  projects.csv  report.py  runner.py  summary.json  summary.md
docs/: ARCHITECTURE.md  CLI.md  EXAMPLES.md  REWRITE_POLICY.md  ROADMAP.md  SAFETY_MODEL.md  SOUNDNESS.md  TESTING_STRATEGY.md  UNSUPPORTED_CASES.md  claim_test_map.md  design.md  golden_corpus.md  limitations.md  research_evaluation.md  rewrite_report.schema.json  safety.md  soundness.md
examples/: closed_guarded.py  open_unobserved_subclass.py  same_shape_callsites.py  simple.py  simple_closed_single.py  simple_obs.json  unsafe_getattribute.py  unsafe_monkey_patch.py  unsafe_phase2_dynamic.py  verify_exception_equivalence.py
scripts/: release_gate.ps1
tests/: test_benchmark_suite.py  test_benchmarks.py  test_cli.py  test_closure.py  test_closure_checker.py  test_collapse.py  test_comparator.py  test_confidence_contract.py  test_dispatch.py  test_evaluation.py  test_evidence_cli.py  test_fuzz_safety.py  test_golden_corpus.py  test_harness.py  test_import.py  test_integration.py  test_mutation_harness.py  test_packaging.py  test_phase2_harness_subprocess.py  test_phase2_negative_mutations.py  test_phase2_rewrite_decisions.py  test_phase3_release_contracts.py  test_planner_field_preservation.py  test_planner_report_cli.py  test_proof_artifacts.py  test_proofs.py  test_properties.py  test_relative_path_binding.py  test_release_quality.py  test_report_serialization.py  test_required_e2e.py  test_smoke.py  test_soundness_unobserved_sibling.py  test_staff_contracts.py  test_static_hierarchy.py  test_tracer.py  test_v011_regressions.py
tools/: check_evidence.py
(+95 files in other folders)
