[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flatten"
version = "0.1.0"
description = "Flatten Python polymorphic dispatch into single-path logic via runtime tracing + LibCST transformation"
requires-python = ">=3.12"
dependencies = [
    "libcst>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/flatten"]
