[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flatten-polymorph"
version = "0.1.1"
description = "Flatten Python polymorphic dispatch into single-path logic via runtime tracing + LibCST transformation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Daeyoung Ryu" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "libcst>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/daeyoungryu/flatten"
Repository = "https://github.com/daeyoungryu/flatten"

[project.scripts]
flatten = "flatten.cli:main"

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "mutmut>=3.0",
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.6",
    "check-wheel-contents>=0.6",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = [
    "^examples/",
    "^tests/",
    "^_parse\\.py$",
    "^_report\\.py$",
]

[tool.coverage.run]
source = ["flatten"]

[tool.mutmut]
paths_to_mutate = ["src/flatten"]
tests_dir = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/flatten", "src/flatten_polymorph"]

[tool.check-wheel-contents]
ignore = ["W009"]
